# checkers

./: GAME_API  README.md  sample_board
checkers-client/: boardwindow.cpp  boardwindow.h  boardwindow.ui  checkers-client.pro  checkersfield.cpp  (+11 more)
checkers-server/: .cproject  .project  CMakeLists.txt  main.cpp
checkers-server/Debug/: makefile  sources.mk  subdir.mk
checkers-server/Debug/eventService/: subdir.mk
checkers-server/Debug/game/: subdir.mk
checkers-server/Debug/jsonParser/: subdir.mk
checkers-server/Debug/network/: subdir.mk
checkers-server/Release/: makefile  subdir.mk
checkers-server/Release/eventService/: subdir.mk
checkers-server/Release/game/: subdir.mk
checkers-server/Release/jsonParser/: subdir.mk
checkers-server/Release/network/: subdir.mk
checkers-server/checkers-server/: main.cpp
checkers-server/checkers-server/network/: TCPClientAcceptor.cpp  TCPClientAcceptor.h  TCPClientConnection.cpp  TCPClientConnection.h
checkers-server/eventService/: RequestBoard.cpp  RequestBoard.h  RequestConnect.cpp  RequestConnect.h  RequestDisconnect.cpp  RequestDisconnect.h  RequestError.cpp  RequestError.h  RequestManager.cpp  RequestManager.h  RequestMessage.cpp  RequestMessage.h  RequestMovement.cpp  RequestMovement.h  RequestService.cpp  RequestService.h
checkers-server/game/: Client.cpp  Client.h  Clients.cpp  Clients.h  Game.cpp  Game.h  Movement.cpp  Movement.h  Server.cpp  Server.h  VotingManager.cpp  VotingManager.h
checkers-server/network/: TCPClientAcceptor.cpp  TCPClientAcceptor.h  TCPClientConnection.cpp  TCPClientConnection.h
